# Models

./: notes.txt
dd_all/: CMakeLists.txt  package.xml
dd_all/launch/: all.launch
dd_inp/: CMakeLists.txt  package.xml
dd_inp/src/: main.py
dd_mov/: CMakeLists.txt  package.xml
dd_mov/src/: main.py
dd_rob/: CMakeLists.txt  package.xml
dd_rob/models/: box.sdf  model.config  model.sdf
dd_rob/scripts/: box_spawn.sh  dd_spawn.sh
dd_rob/src/: ctrl.py  dd.py
dd_rob/world/: bounds.py
dd_robot/models/: box.sdf  model.sdf  notes.txt
dd_robot/scripts/: box_spawn.sh
dd_robot/world/: bounds.py
projects/: receiver.py  sender.py
