<?xml version="1.0"?>
<package>
  <name>dd_inp</name>
  <version>1.0.0</version>
  <description>Keyboard Controller.</description>

  <maintainer email="danSlovich@gmail.com">Dan Slovich</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Dan Slovich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
